@@ -16,7 +16,7 @@
 	<body>
 		<h3>JJY Receivers</h3>
 <p>Last update:
-  <!-- #BeginDate format:En2m -->15-May-2015  00:00<!-- #EndDate -->
+  <!-- #BeginDate format:En2m -->08-May-2016  00:00<!-- #EndDate -->
   UTC &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="driver40.html">ENGLISH（英語）</a> &nbsp; <a href="driver40-ja.html">JAPANESE（日本語）</a></p>
 		<hr>
 		<h4>Synopsis</h4>
@@ -137,7 +137,7 @@
 							<tr>
 								<td><code>{ENQ}1J{ETX}</code></td>
 								<td>&nbsp;--&gt;&nbsp;</td>
-								<td><code>{STX}JYYMMDD HHMMSSS{ETX}</code></td>
+								<td><code>{STX}JYYMMDDWHHMMSSS{ETX}</code></td>
 							</tr>
 						</table>
 						<br>
